delete method and fiz migrations folder
